# playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
photon/: CMakeLists.txt
photon/include/photon/: Handle.h  Material.h  MaterialCache.h  ResourceCache.h  ShaderCache.h  photon.h  typedefs.h
photon/src/: ShaderCache.cpp  photon.cpp
src/: Shader.cpp  Shader.h  ShaderProgramImpl.cpp  ShaderProgramImpl.h  VertexArrayInfo.cpp  VertexArrayInfo.h  Window.cpp  Window.h  base.h  constants.h  main.cpp  typedefs.h  types.h
src/geometry/: Cube.h  Rectangle.h
src/materials/: SolidMaterial.h
src/shaders/: PhongShader.h  SolidShader.h  common.h  phong.shader  solid.shader  solid_color.frag
src/shaders/glsl/: identity.vert  mvp.vert  phong.frag  solid_color.frag
src/utility/: errors.h  logger.h  pgmath.h  ui.cpp  ui.h
